--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,7 @@ jobs:
         run: |
           rm -rf titledb
           git clone https://github.com/blawar/titledb titledb
+          cp *.txt titledb/
           python3 nut.py -U --import-region US --language en
           cp titledb/titles.json ./titles.US.en.json
         
