--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,10 +54,12 @@ jobs:
         run: |
           rm -rf titledb
           git clone --depth 1 https://github.com/blawar/titledb titledb
-          curl https://raw.githubusercontent.com/arch-box/titledb/main/demos.txt > titledb/demos.txt
-          curl https://raw.githubusercontent.com/arch-box/titledb/main/homebrew.txt > titledb/homebrew.txt
-          curl https://raw.githubusercontent.com/arch-box/titledb/main/overrides.txt > titledb/overrides.txt
-          curl https://raw.githubusercontent.com/arch-box/titledb/main/retailOnly.txt > titledb/retailOnly.txt
+          curl https://raw.githubusercontent.com/arch-box/titledb/main/demos.txt > demos.txt
+          curl https://raw.githubusercontent.com/arch-box/titledb/main/homebrew.txt > homebrew.txt
+          curl https://raw.githubusercontent.com/arch-box/titledb/main/overrides.txt > overrides.txt
+          curl https://raw.githubusercontent.com/arch-box/titledb/main/retailOnly.txt > retailOnly.txt
+          cp *.txt titledb/
+          curl https://raw.githubusercontent.com/arch-box/titledb/main/nut.conf > conf/nut.conf
           python3 nut.py -U --import-region US --language en
           cp titledb/titles.json ./titles.US.en.json
         
