--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           USESSL: openssl
           USEOPENSSL: 1.1.1d
         run: |
-          sudo apt-get install libcurl4-gnutls-dev libgnutls28-dev
+          sudo apt-get update && sudo apt-get install libcurl4-gnutls-dev libgnutls28-dev
         shell: bash
       
       - name: Install python dependencies
