--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,7 @@ jobs:
           curl https://raw.githubusercontent.com/arch-box/titledb/main/overrides.txt > overrides.txt
           curl https://raw.githubusercontent.com/arch-box/titledb/main/retailOnly.txt > retailOnly.txt
           cp *.txt titledb/
+          touch titledb/titles.json
           curl https://raw.githubusercontent.com/arch-box/titledb/main/nut.conf > conf/nut.conf
           python3 nut.py -U --import-region US --language en
           cp titledb/titles.json ./titles.US.en.json
