--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
-          repository: blawar/nut
+          repository: arch-box/nut
           submodules: recursive
       
       - name: Set up Python 3.9.7
@@ -53,7 +53,7 @@ jobs:
       - name: Build TitleDB
         run: |
           rm -rf titledb
-          git clone --depth 1 https://github.com/arch-box/nut titledb
+          git clone --depth 1 https://github.com/blawar/titledb titledb
           curl https://raw.githubusercontent.com/arch-box/titledb/main/demos.txt > demos.txt
           curl https://raw.githubusercontent.com/arch-box/titledb/main/homebrew.txt > homebrew.txt
           curl https://raw.githubusercontent.com/arch-box/titledb/main/overrides.txt > overrides.txt
